// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Renders the UI snapshot correctly 1`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ux2uhk"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 2`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ux2uhk"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 3`] = `
<div
  className="chakra-accordion css-1t0bvx9"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ux2uhk"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 4`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="testid"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ux2uhk"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 5`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ux2uhk"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 6`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1ha5g6c"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 7`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-z8csgr"
      disabled={false}
      id="accordion-button-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon css-1nreziu"
        data-file-name="SvgPlus"
        focusable={false}
        id="accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;
